--- a/Html Exercice/Html07/Html07.html
+++ b/Html Exercice/Html07/Html07.html
@@ -6,9 +6,7 @@
     <title>Utilisation des tableaux</title>
 </head>
 <body>
-    <center>
-    <h1>Réussir sa page HTML</h1>
-    </center>
+    <h1 style="text-align: center;">Réussir sa page HTML</h1>
     <table
     cellmargin="20"
     cellpadding="10"
