--- a/Html Exercice/Html Form/HtmlForm02.html
+++ b/Html Exercice/Html Form/HtmlForm02.html
@@ -13,14 +13,15 @@
             display: flex;
             gap: 10px; /* Espace entre les boutons */
         }
+        h1,h2 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <form method="get" action="http://www.afpa.fr"></form>
-    <center>
+    <form method="get" action="http://www.afpa.fr">
         <h1>Nous lançons une grane enquêtes sur les anciens stagiaires</h1>
         <h2>Merci de nous répondre</h2>
-    </center>
             <input type="text" name="Nom" placeholder="Entrez Nom">
         <br>
             <input type="text" name="Prénom" placeholder="Entrez Prénom">
