--- a/Html Exercice/Html06.html
+++ b/Html Exercice/Html06.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1>Cliquer sur la ville de votre choix</h1>
-    <p><img src="./images/carte-de-france-cliquable-html5.gif" usemap="#carte" border="no" alt="France">
+    <p><img src="./images/carte-de-france-cliquable-html5.gif" usemap="#carte-de-france-cliquable-html5.gif" border="no" alt="France">
 
-    <map id="carte">
-        <area coords="208.12.258.33" href="./page09-2.htm" alt="Lille">
-        <area coords="198.86.253.96" href="./page09-3.htm" alt="Paris">
+    <map id="carte-de-france-cliquable-html5.gif">
+        <area coords="208,12,258,33" href="./page09-2.htm" alt="Lille">
+        <area coords="198,86,253,96" href="./page09-3.htm" alt="Paris">
     </map></p>
 </body>
 </html>
